--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,11 @@ vendor/
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
 # composer.lock
 
+
+# Created by https://www.gitignore.io/api/sonar
+
+### Sonar ###
+#Sonar generated dir
+/.sonar/
+
+# End of https://www.gitignore.io/api/sonar
